appId: "com.recipedia"
name: "Search screen can search recipes with filters"
---
- launchApp

- tapOn:
    text: "󰍉"
    label: Open Search screen
- runFlow: asserts/Home/homeScreenNotVisible.yaml
- runFlow: asserts/Search/searchScreenVisible.yaml
- pressKey: "BACK"
- runFlow: asserts/Home/homeScreenVisible.yaml

- tapOn:
    text: "󰍉"
    label: Open Search screen
- tapOn:
    id: "SearchBar"
    label: Open search bar
- hideKeyboard:
    label: Close the keyboard
- tapOn:
    text: "󰅖"
    label: Tap on cross icon to close the search bar
- pressKey: "BACK"
