appId: "com.recipedia"

---

- assertVisible:
    id: "com.recipedia:id/alertTitle"
    text: "SUCCESSFULLY ADDED RECIPE TO SHOPPING LIST"
    label: Alert title is rendered
- assertVisible:
    id: "android:id/message"
    text: "Recipe titled \"Caesar Salad\" has been successfully added to the shopping list"
    label: Alert message, is rendered
- assertVisible:
    id: "android:id/button1"
    text: "OK"
    label: Alert validation is rendered
- tapOn:
    text: "UNDERSTOOD"
    label: Close the Alert
