appId: "com.recipedia"

---
- assertVisible:
    id: "com.recipedia:id/alertTitle"
    text: "Recipes that use Pizza Dough"
    label: Alert title is rendered
- assertVisible:
    id: "android:id/message"
    text: "Here are the list of recipes for this ingredient :

    \t- Margherita Pizza"
    label: Alert message, is rendered
- assertVisible:
    id: "android:id/button1"
    text: "OK"
    label: Alert validation is rendered
- tapOn:
    text: "UNDERSTOOD"
    label: Close the Alert
