appId: "com.recipedia"

---
- assertVisible:
    id: "com.recipedia:id/alertTitle"
    text: "Recettes utilisant taco shells"
    label: "Alert title is displayed in French"
- assertVisible:
    id: "android:id/message"
    text: "Voici la liste des recettes utilisant cet ingrédient :\n\t- Chicken Tacos"
    label: "Alert message is displayed in French"
- assertVisible:
    id: "android:id/button1"
    text: "OK"
    label: "Alert validation is displayed in French"
- tapOn:
    text: "OK"
    label: Close the Alert
