appId: "com.recipedia"
---
- assertVisible:
    text: "SUCCESSFULLY ADDED RECIPE TO DATABASE"
    label: Alert title is displayed
- assertVisible:
    text: "Recipe titled \"Title\" has been successfully added to the database"
    label: Alert message containing all missing elements is displayed
- assertVisible:
    text: "OK"
    label: Alert validation button is displayed
- tapOn:
    text: "OK"
    label: Tap on the validation button
