appId: "com.recipedia"
---
- assertVisible:
    text: "Succès"
    label: "Alert title is displayed in French"
- assertVisible:
    text: "Recette \"Titre\" ajoutée avec succès à la base de donnée"
    label: "Alert message containing all missing elements is displayed in French"
- assertVisible:
    text: "Compris"
    label: "Alert validation button is displayed in French"
- tapOn:
    text: "Compris"
    label: "Tap on the validation button"
