appId: "com.recipedia"
---
- assertVisible:
    text: "󰍉"
    label: Search button is displayed
- assertVisible:
    text: "Title of recipe"
    label: Search string is displayed
- assertVisible:
    text: "󰈴"
    label: Assert icon add filter is displayed
- assertVisible:
    text: "Add a filter"
    label: Add filter button is displayed
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Grain or Cereal"
    label: Grain or Cereal category is rendered with + icon
- tapOn:
    text: "Grain or Cereal"
    label: Tap on Grain Or Cereal to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Grain or Cereal"
    label: Grain or Cereal category is rendered with - icon
- assertVisible:
    text: "󰄱, Spaghetti"
    label: Spaghetti filter is rendered
- assertVisible:
    text: "󰄱, Taco Shells"
    label: Taco Shells filter is rendered
- assertVisible:
    text: "󰄱, Flour"
    label: Flour filter is rendered
- assertVisible:
    text: "󰄱, Croutons"
    label: Croutons filter is rendered
- assertVisible:
    text: "󰄱, Pizza Dough"
    label: Pizza Dough filter is rendered
- assertVisible:
    text: "󰄱, Flour"
    label: Flour filter is rendered
- assertVisible:
    text: "󰄱, Pasta"
    label: Pasta filter is rendered
- assertVisible:
    text: "󰄱, Sushi Rice"
    label: Sushi Rice filter is rendered
- tapOn:
    text: "Grain or Cereal"
    label: Tap on Grain Or Cereal to hide filters under this category
- assertNotVisible:
    text: "󰄱, Spaghetti"
    label: Spaghetti filter is not rendered
- assertNotVisible:
    text: "󰄱, Taco Shells"
    label: Taco Shells filter is not rendered
- assertNotVisible:
    text: "󰄱, Flour"
    label: Flour filter is not rendered
- assertNotVisible:
    text: "󰄱, Croutons"
    label: Croutons filter is not rendered
- assertNotVisible:
    text: "󰄱, Pizza Dough"
    label: Pizza Dough filter is not rendered
- assertNotVisible:
    text: "󰄱, Flour"
    label: Flour filter is not rendered
- assertNotVisible:
    text: "󰄱, Pasta"
    label: Pasta filter is not rendered
- assertNotVisible:
    text: "󰄱, Sushi Rice"
    label: Sushi Rice filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Legumes"
    label: Legumes category is rendered with + icon
- tapOn:
    text: "Legumes"
    label: Tap on Legumes to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Legumes"
    label: Legumes category is rendered
- assertVisible:
    text: "󰄱, Red Lentils"
    label: Red Lentils filter is rendered
- tapOn:
    text: "Legumes"
    label: Tap on Legumes to hide filters under this category
- assertNotVisible:
    text: "󰄱, Red Lentils"
    label: Red Lentils filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Vegetable"
    label: Vegetable category is rendered with + icon
- tapOn:
    text: "Vegetable"
    label: Tap on Vegetable to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Vegetable"
    label: Vegetable category is rendered
- assertVisible:
    text: "󰄱, Lettuce"
    label: Lettuce filter is rendered
- assertVisible:
    text: "󰄱, Romaine Lettuce"
    label: Romaine Lettuce filter is rendered
- assertVisible:
    text: "󰄱, Carrots"
    label: Carrots filter is rendered
- assertVisible:
    text: "󰄱, Celery"
    label: Celery filter is rendered
- assertVisible:
    text: "󰄱, Potatoes"
    label: Potatoes filter is rendered
- assertVisible:
    text: "󰄱, Onions"
    label: Onions filter is rendered
- assertVisible:
    text: "󰄱, Tomatoes"
    label: Tomatoes filter is rendered
- tapOn:
    text: "Vegetable"
    label: Tap on Vegetable to hide filters under this category
- assertNotVisible:
    text: "󰄱, Lettuce"
    label: Lettuce filter is not rendered
- assertNotVisible:
    text: "󰄱, Romaine Lettuce"
    label: Romaine Lettuce filter is not rendered
- assertNotVisible:
    text: "󰄱, Carrots"
    label: Carrots filter is not rendered
- assertNotVisible:
    text: "󰄱, Celery"
    label: Celery filter is not rendered
- assertNotVisible:
    text: "󰄱, Potatoes"
    label: Potatoes filter is not rendered
- assertNotVisible:
    text: "󰄱, Onions"
    label: Onions filter is not rendered
- assertNotVisible:
    text: "󰄱, Tomatoes"
    label: Tomatoes filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Plant Protein"
    label: Plant Protein category is rendered with + icon
- tapOn:
    text: "Plant Protein"
    label: Tap on Plant Protein to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Plant Protein"
    label: Plant Protein category is rendered
- assertVisible:
    text: "󰄱, Eggs"
    label: Eggs filter is rendered
- tapOn:
    text: "Plant Protein"
    label: Tap on Plant Protein to hide filters under this category
- assertNotVisible:
    text: "󰄱, Eggs"
    label: Eggs filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Condiment"
    label: Condiment category is rendered with + icon
- tapOn:
    text: "Condiment"
    label: Tap on Condiment to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Condiment"
    label: Condiment category is rendered
- assertVisible:
    text: "󰄱, Nori Sheets"
    label: Nori Sheets filter is rendered
- assertVisible:
    text: "󰄱, Soy Sauce"
    label: Soy Sauce filter is rendered
- tapOn:
    text: "Condiment"
    label: Tap on Condiment to hide filters under this category
- assertNotVisible:
    text: "󰄱, Nori Sheets"
    label: Nori Sheets filter is not rendered
- assertNotVisible:
    text: "󰄱, Soy Sauce"
    label: Soy Sauce filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Sauce"
    label: Sauce category is rendered with + icon
- tapOn:
    text: "Sauce"
    label: Tap on Sauce to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Sauce"
    label: Sauce category is rendered
- assertVisible:
    text: "󰄱, Tomato Sauce"
    label: Tomato Sauce filter is rendered
- assertVisible:
    text: "󰄱, Caesar Dressing"
    label: Caesar Dressing filter is rendered
- assertVisible:
    text: "󰄱, Vegetable Broth"
    label: Vegetable Broth filter is rendered
- assertVisible:
    text: "󰄱, Coconut Milk"
    label: Coconut Milk filter is rendered
- tapOn:
    text: "Sauce"
    label: Tap on Sauce to hide filters under this category
- assertNotVisible:
    text: "󰄱, Tomato Sauce"
    label: Tomato Sauce filter is not rendered
- assertNotVisible:
    text: "󰄱, Caesar Dressing"
    label: Caesar Dressing filter is not rendered
- assertNotVisible:
    text: "󰄱, Vegetable Broth"
    label: Vegetable Broth filter is not rendered
- assertNotVisible:
    text: "󰄱, Coconut Milk"
    label: Coconut Milk filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Meat"
    label: Meat category is rendered with + icon
- tapOn:
    text: "Meat"
    label: Tap on Meat to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Meat"
    label: Meat category is rendered
- assertVisible:
    text: "󰄱, Ground Beef"
    label: Ground Beef filter is rendered
- tapOn:
    text: "Meat"
    label: Tap on Meat to see filters under this category
- assertNotVisible:
    text: "󰄱, Ground Beef"
    label: Ground Beef filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Poultry"
    label: Poultry category is rendered with + icon
- tapOn:
    text: "Poultry"
    label: Tap on Poultry to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Poultry"
    label: Poultry category is rendered
- assertVisible:
    text: "󰄱, Chicken Breast"
    label: Chicken Breast filter is rendered
- tapOn:
    text: "Poultry"
    label: Tap on Poultry to hide filters under this category
- assertNotVisible:
    text: "󰄱, Chicken Breast"
    label: Chicken Breast filter is not rendered
- swipe:
    start: "50%,85%"
    end: "50%,30%"
    label: Swipe down to see other item
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Fish"
    label: Fish category is rendered with + icon
- tapOn:
    text: "Fish"
    label: Tap on Fish to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Fish"
    label: Fish category is rendered
- assertVisible:
    text: "󰄱, Salmon"
    label: Salmon filter is rendered
- tapOn:
    text: "Fish"
    label: Tap on Fish to hide filters under this category
- assertNotVisible:
    text: "󰄱, Salmon"
    label: Salmon filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Dairy"
    label: Dairy category is rendered with + icon
- tapOn:
    text: "Dairy"
    label: Tap on Dairy to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Dairy"
    label: Dairy category is rendered
- assertVisible:
    text: "󰄱, Milk"
    label: Milk filter is rendered
- tapOn:
    text: "Dairy"
    label: Tap on Dairy to hide filters under this category
- assertNotVisible:
    text: "󰄱, Milk"
    label: Milk filter is not rendered
- swipe:
    start: "50%,85%"
    end: "50%,30%"
    label: Swipe down to see other items
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Cheese"
    label: Cheese category is rendered with + icon
- tapOn:
    text: "Cheese"
    label: Tap on Cheese to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Cheese"
    label: Cheese category is rendered
- assertVisible:
    text: "󰄱, Parmesan"
    label: Parmesan filter is rendered
- assertVisible:
    text: "󰄱, Cheddar"
    label: Cheddar filter is rendered
- assertVisible:
    text: "󰄱, Mozzarella"
    label: Mozzarella filter is rendered
- tapOn:
    text: "Cheese"
    label: Tap on Cheese to hide filters under this category
- assertNotVisible:
    text: "󰄱, Parmesan"
    label: Parmesan filter is not rendered
- assertNotVisible:
    text: "󰄱, Cheddar"
    label: Cheddar filter is not rendered
- assertNotVisible:
    text: "󰄱, Mozzarella"
    label: Mozzarella filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Sugar"
    label: Sugar category is rendered with + icon
- tapOn:
    text: "Sugar"
    label: Tap on Sugar to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Sugar"
    label: Sugar category is rendered
- assertVisible:
    text: "󰄱, Sugar"
    label: Sugar filter is rendered
- tapOn:
    text: "Sugar"
    label: Tap on Sugar to hide filters under this category
- assertNotVisible:
    text: "󰄱, Sugar"
    label: Sugar filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Spice"
    label: Spice category is rendered with + icon
- tapOn:
    text: "Spice"
    label: Tap on Spice to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Spice"
    label: Spice category is rendered
- assertVisible:
    text: "󰄱, Basil Leaves"
    label: Basil Leaves filter is rendered
- assertVisible:
    text: "󰄱, Cocoa Powder"
    label: Cocoa Powder filter is rendered
- assertVisible:
    text: "󰄱, Curry Powder"
    label: Curry Powder filter is rendered
- tapOn:
    text: "Spice"
    label: Tap on Spice to hide filters under this category
- assertNotVisible:
    text: "󰄱, Basil Leaves"
    label: Basil Leaves filter is not rendered
- assertNotVisible:
    text: "󰄱, Cocoa Powder"
    label: Cocoa Powder filter is not rendered
- assertNotVisible:
    text: "󰄱, Curry Powder"
    label: Curry Powder filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Fruit"
    label: Fruit category is rendered with + icon
- tapOn:
    text: "Fruit"
    label: Tap on Fruit to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Fruit"
    label: Fruit category is rendered
- assertVisible:
    text: "󰄱, Avocado"
    label: Avocado filter is rendered
- tapOn:
    text: "Fruit"
    label: Tap on Fruit to hide filters under this category
- assertNotVisible:
    text: "󰄱, Avocado"
    label: Avocado filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Oil and Fat"
    label: Oil and Fat category is rendered with + icon
- tapOn:
    text: "Oil and Fat"
    label: Tap on Oil and Fat to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Oil and Fat"
    label: Oil and Fat category is rendered
- assertVisible:
    text: "󰄱, Butter"
    label: Butter filter is rendered
- assertVisible:
    text: "󰄱, Olive Oil"
    label: Olive Oil filter is rendered
- tapOn:
    text: "Oil and Fat"
    label: Tap on Oil and Fat to hide filters under this category
- assertNotVisible:
    text: "󰄱, Butter"
    label: Butter filter is not rendered
- assertNotVisible:
    text: "󰄱, Olive Oil"
    label: Olive Oil filter is not rendered
- swipe:
    start: "50%,85%"
    end: "50%,30%"
    label: Swipe down to see other item
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Nuts and Seeds"
    label: Nuts and Seeds category is rendered with + icon
- tapOn:
    text: "Nuts and Seeds"
    label: Tap on Nuts and Seeds to see filters under this category
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Nuts and Seeds"
    label: Nuts and Seeds category is rendered
- assertVisible:
    text: "󰄱, Pine Nuts"
    label: Pine Nuts filter is rendered
- tapOn:
    text: "Nuts and Seeds"
    label: Tap on Nuts and Seeds to hide filters under this category
- assertNotVisible:
    text: "󰄱, Pine Nuts"
    label: Pine Nuts filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Preparation Time"
    label: Preparation Time category is rendered with + icon
- tapOn:
    text: "Preparation Time"
    label: Tap on Preparation Time to see filters under this category
- swipe:
    start: "50%,85%"
    end: "50%,30%"
    label: Swipe down to see other items
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Preparation Time"
    label: Preparation Time category is rendered
- assertVisible:
    text: "󰄱, 0-10 min"
    label: 0-10 min filter is rendered
- assertVisible:
    text: "󰄱, 10-15 min"
    label: 10-15 min filter is rendered
- assertVisible:
    text: "󰄱, 15-20 min"
    label: 15-20 min filter is rendered
- assertVisible:
    text: "󰄱, 20-25 min"
    label: 20-25 min filter is rendered
- assertVisible:
    text: "󰄱, 25-30 min"
    label: 25-30 min filter is rendered
- assertVisible:
    text: "󰄱, 30-40 min"
    label: 30-40 min filter is rendered
- assertVisible:
    text: "󰄱, 40-50 min"
    label: 40-50 min filter is rendered
- assertVisible:
    text: "󰄱, +60 min"
    label: +60 min filter is rendered
- tapOn:
    text: "Preparation Time"
    label: Tap on Preparation Time to hide filters under this category
- assertNotVisible:
    text: "󰄱, 0-10 min"
    label: 0-10 min filter is not rendered
- assertNotVisible:
    text: "󰄱, 10-15 min"
    label: 10-15 min filter is not rendered
- assertNotVisible:
    text: "󰄱, 15-20 min"
    label: 15-20 min filter is not rendered
- assertNotVisible:
    text: "󰄱, 20-25 min"
    label: 20-25 min filter is not rendered
- assertNotVisible:
    text: "󰄱, 25-30 min"
    label: 25-30 min filter is not rendered
- assertNotVisible:
    text: "󰄱, 30-40 min"
    label: 30-40 min filter is not rendered
- assertNotVisible:
    text: "󰄱, 40-50 min"
    label: 40-50 min filter is not rendered
- assertNotVisible:
    text: "󰄱, +60 min"
    label: +60 min filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Only in-season ingredients"
    label: In-season category is rendered with + icon
- tapOn:
    text: "Only in-season ingredients"
    label: Tap on In-season to see filters under this category
- swipe:
    start: "50%,85%"
    end: "50%,30%"
    label: Swipe down to see other items
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Only in-season ingredients"
    label: In-Season category is rendered
- assertVisible:
    text: "󰄱, Only in-season ingredients"
    label: Only in-season ingredients filter is rendered
- tapOn:
    text: "Only in-season ingredients"
    label: Tap on In-season to hide filters under this category
- assertNotVisible:
    text: "󰄱, Only in-season ingredients"
    label: Only in-season ingredients filter is not rendered
- assertVisible:
    text: "󰐕"
    label: Plus button is displayed
- assertVisible:
    text: "Tags"
    label: Tags category is rendered with + icon
- tapOn:
    text: "Tags"
    label: Tap on Tags to see filters under this category
- swipe:
    start: "50%,85%"
    end: "50%,30%"
    label: Swipe down to see other items
- assertVisible:
    text: "󰍴"
    label: Minus icon is rendered
- assertVisible:
    text: "Tags"
    label: Tags category is rendered
- assertVisible:
    text: "󰄱, Breakfast"
    label: Breakfast filter is rendered
- assertVisible:
    text: "󰄱, Chocolate"
    label: Chocolate filter is rendered
- assertVisible:
    text: "󰄱, Dessert"
    label: Dessert filter is rendered
- assertVisible:
    text: "󰄱, Dinner"
    label: Dinner filter is rendered
- assertVisible:
    text: "󰄱, Healthy"
    label: Healthy filter is rendered
- assertVisible:
    text: "󰄱, Indian"
    label: Indian filter is rendered
- assertVisible:
    text: "󰄱, Italian"
    label: Italian filter is rendered
- assertVisible:
    text: "󰄱, Japanese"
    label: Japanese filter is rendered
- assertVisible:
    text: "󰄱, Lunch"
    label: Lunch filter is rendered
- assertVisible:
    text: "󰄱, Mexican"
    label: Mexican filter is rendered
- assertVisible:
    text: "󰄱, Quick Meal"
    label: Quick Meal filter is rendered
- assertVisible:
    text: "󰄱, Salad"
    label: Salad filter is rendered
- assertVisible:
    text: "󰄱, Seafood"
    label: Seafood filter is rendered
- assertVisible:
    text: "󰄱, Soup"
    label: Soup filter is rendered
- assertVisible:
    text: "󰄱, Vegetarian"
    label: Vegetarian filter is rendered
- tapOn:
    text: "Tags"
    label: Tap on Tags to hide filters under this category
- assertNotVisible:
    text: "󰄱, Breakfast"
    label: Breakfast filter is not rendered
- assertNotVisible:
    text: "󰄱, Chocolate"
    label: Chocolate filter is not rendered
- assertNotVisible:
    text: "󰄱, Dessert"
    label: Dessert filter is not rendered
- assertNotVisible:
    text: "󰄱, Dinner"
    label: Dinner filter is not rendered
- assertNotVisible:
    text: "󰄱, Healthy"
    label: Healthy filter is not rendered
- assertNotVisible:
    text: "󰄱, Indian"
    label: Indian filter is not rendered
- assertNotVisible:
    text: "󰄱, Italian"
    label: Italian filter is not rendered
- assertNotVisible:
    text: "󰄱, Japanese"
    label: Japanese filter is not rendered
- assertNotVisible:
    text: "󰄱, Lunch"
    label: Lunch filter is not rendered
- assertNotVisible:
    text: "󰄱, Mexican"
    label: Mexican filter is not rendered
- assertNotVisible:
    text: "󰄱, Quick Meal"
    label: Quick Meal filter is not rendered
- assertNotVisible:
    text: "󰄱, Salad"
    label: Salad filter is not rendered
- assertNotVisible:
    text: "󰄱, Seafood"
    label: Seafood filter is not rendered
- assertNotVisible:
    text: "󰄱, Soup"
    label: Soup filter is not rendered
- assertNotVisible:
    text: "󰄱, Vegetarian"
    label: Vegetarian filter is not rendered
- swipe:
    start: "50%,15%"
    end: "50%,95%"
    label: Swipe Up to reset to initial position
